--- a/src/java/Internationalisation_fr_CA.properties
+++ b/src/java/Internationalisation_fr_CA.properties
@@ -1,4 +1,6 @@
 acceuil = Acceuil
+bienvenue = Bienvenue
+message1 = Visitez nos Produits
 produit = Produits
 sanitation = Sanitation
 pompe = Pompes
